--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -170,16 +170,16 @@ crossorigin=""/>
     <span lang="fr"> COMMENT NOS PARFUMS SONT-ILS CRÉÉS ?</span>
     <span lang="en"> HOW PERFUMES ARE MADE ?</span>
   </h1>
-  <h2 class="sous_titre">
-    <span lang="fr">Découvrez comment sont faits les parfums que nous achetons chaque jour, de l’idée marketing à la vente, en passant par la création et la fabrication.</span>
-    <span lang="en">Discover how our everyday perfumes are made, from the marketing idea to the selling, passing by creation and production.</span>
-  </h2>
 </div>
 
 <hr>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
+  <h2 class="sous_titre mt-3">
+    <span lang="fr">Découvrez comment sont faits les parfums que nous achetons chaque jour, de l’idée marketing à la vente, en passant par la création et la fabrication.</span>
+    <span lang="en">Discover how our everyday perfumes are made, from the marketing idea to the selling, passing by creation and production.</span>
+  </h2>
   <p class="mt-3">
     <span lang ="fr">
       Les matières premières détaillées dans <a href="www.scentree.co" target="_blank">ScenTree</a> constituent l’alphabet du parfumeur. Un alphabet est utilisé pour écrire des mots. Les mots sont utilisés pour raconter une histoire. Cette histoire est couramment appelée « parfum ». Le parfum résulte donc de l’expression de la société qui le commercialise et de celle du créateur – le parfumeur – utilisant cet alphabet, dans le but de raconter une histoire. Le parfumeur doit maîtriser son alphabet avant toute création. Un parfum est le résultat du travail d’une équipe. 
