--- a/html/_/support.html
+++ b/html/_/support.html
@@ -200,7 +200,7 @@ crossorigin=""/>
         </p>
         <p>
           <ul>
-            <li>ASTORRI Marc -<span lang="fr" class="profession"> (Apprenti Parfumeur)</span><span lang="en" class="profession"> (Ex-Perfumer Apprentice)</span></li>
+            <li>ASTORRI Marc -<span lang="fr" class="profession"> (Ancien Apprenti Parfumeur)</span><span lang="en" class="profession"> (Former Perfumer Apprentice)</span></li>
             <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
             <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
             <li>DECOLIN Clémence -<span lang="fr" class="profession"> (Evaluatrice Fine Fragrance)</span><span lang="en" class="profession"> (Fine Fragrance Evaluator)</span></li>
