--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -190,10 +190,11 @@ crossorigin=""/>
       The raw materials detailed in <a href="www.scentree.co" target="_blank">ScenTree</a> make up the perfumer's alphabet. An alphabet is used to write words. Words are used to tell a story. This story is commonly called "perfume". The perfume is the result of the expression of the company that markets it and the expression of the creator - the perfumer - using this alphabet to tell a story. The perfumer must master his alphabet before any creation. A perfume is the result of the work of a team. 
       <br>From the idea to the finished product, from the client to the consumer, let's chronologically detail every aspect of the creation of a perfume.
     </span>
+    <img class="img1creationparfum" src="../img/cycleparfum.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum">
   </p>
 
 
-  <p style="text-align: center;"><img class="img1creationparfum" src="../img/cycleparfum.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum"></p>
+  
 
 <ol>
   <li>
