--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -192,7 +192,8 @@ crossorigin=""/>
     </span>
   </p>
 
-  <img class="img1creationparfum" src="../img/cycleparfum.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum">
+  <img class="img1creationparfum" lang="fr" src="../img/cycleparfumFR.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum">
+  <img class="img1creationparfum" lang="en" src="../img/cycleparfumEN.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum">
   
 
 <ol>
