--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -188,7 +188,8 @@ crossorigin=""/>
     </span>
     <span lang="en">
       The raw materials detailed in <a href="www.scentree.co" target="_blank">ScenTree</a> make up the perfumer's alphabet. An alphabet is used to write words. Words are used to tell a story. This story is commonly called "perfume". The perfume is the result of the expression of the company that markets it and the expression of the creator - the perfumer - using this alphabet to tell a story. The perfumer must master his alphabet before any creation. A perfume is the result of the work of a team. 
-      <br>From the idea to the finished product, from the client to the consumer, let's chronologically detail every aspect of the creation of a perfume.
+      <br>
+      From the idea to the finished product, from the client to the consumer, let's chronologically detail every aspect of the creation of a perfume.
     </span>
   </p>
 
@@ -203,7 +204,7 @@ crossorigin=""/>
       <span lang="en">The customer as a target</span>
     </h2>
     <p>
-      <span lang="fr">Tout commence par le besoin d’un consommateur. Le client souhaite acheter un parfum qui lui correspond, qui lui plait. Il peut vouloir respecter les tendances, ou s’affirmer à travers une originalité olfactive. <b>Ce sont les envies du consommateur que les marques souhaitent cibler.</b></span>
+      <span lang="fr">Tout commence par le <b>besoin d’un consommateur</b>. Le client souhaite acheter un parfum qui lui correspond, qui lui plait. Il peut vouloir respecter les <b>tendances</b>, ou s’affirmer à travers une originalité olfactive. <b class="b+">Ce sont les envies du consommateur que les marques souhaitent cibler.</b></span>
       <span lang="en">It all starts with the consumer’s need. The customer wants to buy a perfume that suits him, that he likes. He may want to respect trends, or assert himself through olfactory originality. <b>It is the consumer's desires that the brands wish to target.</b></span>
     </p>
   </li>
