--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -204,7 +204,7 @@ crossorigin=""/>
       <span lang="en">The customer as a target</span>
     </h2>
     <p>
-      <span lang="fr">Tout commence par le <b>besoin d’un consommateur</b>. Le client souhaite acheter un parfum qui lui correspond, qui lui plait. Il peut vouloir respecter les <b>tendances</b>, ou s’affirmer à travers une originalité olfactive. <b class="b+">Ce sont les envies du consommateur que les marques souhaitent cibler.</b></span>
+      <span lang="fr">Tout commence par le <b>besoin d’un consommateur</b>. Le client souhaite acheter un parfum qui lui correspond, qui lui plait. Il peut vouloir respecter les <b>tendances</b>, ou s’affirmer à travers une originalité olfactive. <b class="bplus">Ce sont les envies du consommateur que les marques souhaitent cibler.</b></span>
       <span lang="en">It all starts with the consumer’s need. The customer wants to buy a perfume that suits him, that he likes. He may want to respect trends, or assert himself through olfactory originality. <b>It is the consumer's desires that the brands wish to target.</b></span>
     </p>
   </li>
