--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -205,7 +205,7 @@ crossorigin=""/>
     </h2>
     <p>
       <span lang="fr">Tout commence par le <b>besoin d’un consommateur</b>. Le client souhaite acheter un parfum qui lui correspond, qui lui plait. Il peut vouloir respecter les <b>tendances</b>, ou s’affirmer à travers une originalité olfactive. <b class="bplus">Ce sont les envies du consommateur que les marques souhaitent cibler.</b></span>
-      <span lang="en">It all starts with the consumer’s need. The customer wants to buy a perfume that suits him, that he likes. He may want to respect trends, or assert himself through olfactory originality. <b>It is the consumer's desires that the brands wish to target.</b></span>
+      <span lang="en">It all starts with the <b>consumer’s need</b>. The customer wants to buy a perfume that suits him, that he likes. He may want to respect <b>trends</b>, or assert himself through olfactory originality. <b class="bplus">It is the consumer's desires that the brands wish to target.</b></span>
     </p>
   </li>
 
@@ -215,8 +215,8 @@ crossorigin=""/>
       <span lang="en">One idea, one type of perfume and one brief to guide creation</span>
     </h2>
     <p>
-      <span lang="fr">Lorsqu’une marque souhaite sortir un nouveau parfum, plusieurs choix s’offre à elle. Il est ainsi très important de prendre en compte qu'il existe plusieurs types de processus de création, ces derniers étant principalement dépendants du type de parfum que le consommateur recherche. La liste suivante détaille les 5 types de parfums existant à ce jour sur le marché :</span>
-      <span lang="en">When a brand wants to release a new fragrance, there are several choices. It is therefore very important to take into account that there are several types of creation process, which are mainly depending on the type of perfume that the consumer is looking for. The following list details the 5 types of perfume existing on the market today:</span>
+      <span lang="fr">Lorsqu’une marque souhaite sortir un nouveau parfum, plusieurs choix s’offre à elle. Il est ainsi très important de prendre en compte qu'il existe plusieurs types de processus de création, ces derniers étant principalement dépendants du <b>type de parfum</b> que le consommateur recherche. La liste suivante détaille les 5 types de parfums existant à ce jour sur le marché :</span>
+      <span lang="en">When a brand wants to release a new fragrance, there are several choices. It is therefore very important to take into account that there are several types of creation process, which are mainly depending on the <b>type of perfume</b> that the consumer is looking for. The following list details the 5 types of perfume existing on the market today:</span>
     </p>
       <ul>
         <li>
