--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -218,7 +218,7 @@ crossorigin=""/>
       <span lang="fr">Lorsqu’une marque souhaite sortir un nouveau parfum, plusieurs choix s’offre à elle. Il est ainsi très important de prendre en compte qu'il existe plusieurs types de processus de création, ces derniers étant principalement dépendants du <b>type de parfum</b> que le consommateur recherche. La liste suivante détaille les 5 types de parfums existant à ce jour sur le marché :</span>
       <span lang="en">When a brand wants to release a new fragrance, there are several choices. It is therefore very important to take into account that there are several types of creation process, which are mainly depending on the <b>type of perfume</b> that the consumer is looking for. The following list details the 5 types of perfume existing on the market today:</span>
     </p>
-      <ul>
+      <ul class="categorieparfum">
         <li>
           <h3 class="listetypeparfum">
             <span lang="fr">Les parfums dits de "<b>grande distribution</b>": </span>
