--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -225,8 +225,8 @@ crossorigin=""/>
             <span lang="en">"<b>Mass distribution</b>" perfumes :</span>
           </h3>
           <p>
-            <span lang="fr">Ce sont des parfums respectant la tendance, vendu mondialement et en très grande quantité. Ces parfums se retrouvent dans les grandes enseignes de distribution spécialisées que nous connaissons tous. Appuyés par de grosses campagnes publicitaires, ces flacons sont généralement les plus portés et c'est la voie de distribution la plus courante. La concurrence y est très rude et les enjeux très important.</span>
-            <span lang="en">They are trendy perfumes, sold worldwide and in very large quantities. These fragrances can be found in the large specialized distribution chains that we all know. Supported by large advertising campaigns, these bottles are generally the most worn and it is the most common way of distribution. The competition is very tough and the stakes are very high.</span>
+            <span lang="fr">Ce sont des parfums respectant la <b>tendance</b>, vendu mondialement et en très grande quantité. Ces parfums se retrouvent dans les grandes enseignes de distribution spécialisées que nous connaissons tous. Appuyés par de grosses campagnes publicitaires, ces flacons sont généralement les plus portés et c'est la voie de distribution la plus courante. La concurrence y est très rude et les enjeux très important.</span>
+            <span lang="en">They are <b>trendy perfumes</b>, sold worldwide and in very large quantities. These fragrances can be found in the large specialized distribution chains that we all know. Supported by large advertising campaigns, these bottles are generally the most worn and it is the most common way of distribution. The competition is very tough and the stakes are very high.</span>
           </p>
         </li>
         <li>
@@ -235,7 +235,7 @@ crossorigin=""/>
             <span lang="en">"<b>Mass market</b>" perfumes :</span>
           </h3>
           <p>
-            <span lang="fr">Ce sont des parfums crées dans des volumes très importants, possédant très peu, voir pas de marketing, un flacon standard, un packaging généralement sobre. Ces produits se retrouvent généralement dans les rayons de nos supermarchés. Leurs prix sont généralement bas, mais la qualité est cependant présente au rendez-vous. </span>
+            <span lang="fr">Ce sont des parfums crées dans des <b>volumes très importants</b>, possédant très peu, voir pas de marketing, un flacon standard, un packaging généralement sobre. Ces produits se retrouvent généralement dans les rayons de nos supermarchés. Leurs prix sont généralement bas, mais la qualité est cependant présente au rendez-vous. </span>
             <span lang="en">These are perfumes created in very large quantities, with very poor, if any marketing, a classical bottle and generally sober packaging. These products are generally found on the shelves of our supermarkets. Their prices are generally low, but quality is there.</span>
           </p>
         </li>
@@ -245,8 +245,8 @@ crossorigin=""/>
             <span lang="en">"<b>Niche</b>" or "<b>confidential</b>" perfumes :</span>
           </h3>
           <p>
-            <span lang="fr">Ces parfums sont généralement vendu en plus faible quantité, sont très peu soutenu par le marketing mais ils témoignent souvent d’une volonté artistique particulière. Le prix de ces flacons sont généralement supérieurs aux catégories précèdentes car les marques se positionnant ainsi sont généralement indépendantes, produissent peu de volume et se concentre sur le contenu du flacon, pas sur le contenant ou le marketing. C'est généralement dans cette catégorie que se situent les parfums les plus originaux. </span>
-            <span lang="en">These fragrances are generally sold in smaller quantities, have very poor marketing support, but they often show a particular artistic will. The price of these bottles is generally higher than the previous categories because the brands positioning themselves in this way are generally independent, producing poor volumes and focus on the content of the perfume, and not on the packaging or marketing. It is generally in this category that the most original fragrances are found.</span>
+            <span lang="fr">Ces parfums sont généralement vendu en plus faible quantité, sont très peu soutenu par le marketing mais ils témoignent souvent d’une <b>volonté artistique</b> particulière. Le prix de ces flacons sont généralement supérieurs aux catégories précèdentes car les marques se positionnant ainsi sont généralement <b>indépendantes</b>, produissent peu de volume et se <b>concentre sur le contenu du flacon, pas sur le contenant ou le marketing.</b> C'est généralement dans cette catégorie que se situent les parfums les plus originaux. </span>
+            <span lang="en">These fragrances are generally sold in smaller quantities, have very poor marketing support, but they often show a <b>particular artistic will</b>. The price of these bottles is generally higher than the previous categories because the brands positioning themselves in this way are generally <b>independent</b>, producing poor volumes and <b>focus on the content of the perfume, and not on the packaging or marketing</b>. It is generally in this category that the most original fragrances are found.</span>
           </p>
         </li>
         <li>
