--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -255,8 +255,8 @@ crossorigin=""/>
             <span lang="en">"<b>Exclusive</b>" perfumes : </span>
           </h3>
           <p>
-            <span lang="fr">Ces parfums sont généralement crées par les sociétés qui commercialise des parfums dans la première catégorie listée. En parralèle des grandes productions, ces sociétés créent généralement une gamme plus confidentielle, se rapprochant du modèle de niche afin de toucher une clientèle différentes. Leur positionnement sont généralement très haut de gamme. </span>
-            <span lang="en">These fragrances are generally created by companies that market fragrances in the first category listed. Alongside large productions, these companies generally create a more confidential product range, approaching the niche model in order to reach different clients. Their positioning is generally very high-end.</span>
+            <span lang="fr">Ces parfums sont généralement crées par les sociétés qui commercialise des parfums dans la première catégorie listée. En parralèle des grandes productions, ces sociétés créent généralement une <b>gamme plus confidentielle</b>, se rapprochant du modèle de niche afin de toucher une clientèle différentes. Leur positionnement sont généralement très haut de gamme. </span>
+            <span lang="en">These fragrances are generally created by companies that market fragrances in the first category listed. Alongside large productions, these companies generally create a <b>more confidential product range</b>, approaching the niche model in order to reach different clients. Their positioning is generally very high-end.</span>
           </p>  
         </li>
         <li>
@@ -265,12 +265,13 @@ crossorigin=""/>
             <span lang="en">"<b>Customed</b>" perfumes : </span>
           </h3>
           <p>
-            <span lang="fr">Ces parfums sont généralement créés en un nombre extrèmement limité de produit. Ils sont créés pour une seule personne ou pour une société souhaitant se créer une identité olfactive. La création et les prix de vente de ces produits fluctuent énormément en fonction du nombre d'exemplaire, de la demande, du flacon etc.. et peuvent atteindre des sommes records.</span>
-            <span lang="en">These fragrances production is usually very limited. They are created for a single person or for a company wishing to create an olfactory identity for itself. Creation and prices can highly fluctuate, according to the number of copies produced, the demand, the bottle etc., and can reach very high amounts.</span>
+            <span lang="fr">Ces parfums sont généralement créés en un nombre extrèmement limité de produit. Ils sont créés <b>pour une seule personne ou pour une société</b> souhaitant se créer une identité olfactive. La création et les prix de vente de ces produits fluctuent énormément en fonction du nombre d'exemplaire, de la demande, du flacon etc.. et peuvent atteindre des sommes records.</span>
+            <span lang="en">These fragrances production is usually very limited. They are created <b>for a single person or for a company</b> wishing to create an olfactory identity for itself. Creation and prices can highly fluctuate, according to the number of copies produced, the demand, the bottle etc., and can reach very high amounts.</span>
         </li>
       </ul>  
 
-        <br><img class="img2creationparfum" src="../img/evaluatrice.jpg" alt="Evaluation d'un parfum" title="Evaluation d'un parfum">
+      <img class="img2creationparfum" src="../img/evaluatrice.jpg" alt="Evaluation d'un parfum" title="Evaluation d'un parfum">
+
       <p>
         <span lang="fr">Quel que soit l’objectif de la marque, l’idée du thème du parfum résulte d’une étude de marché. Cette étude peut être réalisée dans le but de cibler les notes olfactives, les plus tendance, celles qui n’ont encore jamais été senties, ou encore celles qui vont toucher une cible précise. <b>L’idée résulte de l’interaction entre une marque et un consommateur.</b>
         <br>
