--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -273,11 +273,11 @@ crossorigin=""/>
       <img class="img2creationparfum" src="../img/evaluatrice.jpg" alt="Evaluation d'un parfum" title="Evaluation d'un parfum">
 
       <p>
-        <span lang="fr">Quel que soit l’objectif de la marque, l’idée du thème du parfum résulte d’une étude de marché. Cette étude peut être réalisée dans le but de cibler les notes olfactives, les plus tendance, celles qui n’ont encore jamais été senties, ou encore celles qui vont toucher une cible précise. <b>L’idée résulte de l’interaction entre une marque et un consommateur.</b>
+        <span lang="fr">Quel que soit l’objectif de la marque, l’idée du thème du parfum résulte d’une <b>étude de marché</b>. Cette étude peut être réalisée dans le but de cibler les notes olfactives, les plus tendance, celles qui n’ont encore jamais été senties, ou encore celles qui vont toucher une cible précise. <b class="bplus">L’idée résulte de l’interaction entre une marque et un consommateur.</b>
         <br>
         Une fois l’idée formulée, elle est mise en forme dans un cahier des charges, aussi appelé « brief », dont l’objectif est d’énoncer clairement, ou de suggérer le thème du parfum. Le « brief » peut alors prendre plusieurs formes. Il peut être exprimé avec un ou plusieurs mots, images, musiques, vidéos, œuvres d’art, avec un degré de subjectivité voulu par le service marketing de la marque. <b>C’est le « brief » qui va orienter et inspirer le parfumeur.</b></span>
 
-        <span lang="en">Whatever the brand's objective, the idea for the theme of the fragrance is the result of market study. This study can be carried out with the aim of targeting olfactory notes, the trendiest ones, those that have never been smelled before, or those that are going to hit a specific target. <b>The idea results from the interaction between a brand and a consumer.</b>
+        <span lang="en">Whatever the brand's objective, the idea for the theme of the fragrance is the result of <b>market study</b>. This study can be carried out with the aim of targeting olfactory notes, the trendiest ones, those that have never been smelled before, or those that are going to hit a specific target. <b class="bplus">The idea results from the interaction between a brand and a consumer.</b>
         <br>
         Once the idea has been formulated, it is put into shape in a specification, also called 'brief', whose purpose is to clearly state, or suggest, the theme of the fragrance. The "brief" can then take several forms. It can be expressed with one or more words, images, music, videos, artwork, with a degree of subjectivity desired by the brand's marketing department. <b>The "brief" will guide and inspire the perfumer.</b></span>
       </p>
