--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -272,7 +272,7 @@ crossorigin=""/>
 
       <img class="img2creationparfum" src="../img/evaluatrice.jpg" alt="Evaluation d'un parfum" title="Evaluation d'un parfum">
 
-      <p>
+      <p class="mt-4">
         <span lang="fr">Quel que soit l’objectif de la marque, l’idée du thème du parfum résulte d’une <b>étude de marché</b>. Cette étude peut être réalisée dans le but de cibler les notes olfactives, les plus tendance, celles qui n’ont encore jamais été senties, ou encore celles qui vont toucher une cible précise. <b class="bplus">L’idée résulte de l’interaction entre une marque et un consommateur.</b>
         <br>
         Une fois l’idée formulée, elle est mise en forme dans un cahier des charges, aussi appelé « brief », dont l’objectif est d’énoncer clairement, ou de suggérer le thème du parfum. Le « brief » peut alors prendre plusieurs formes. Il peut être exprimé avec un ou plusieurs mots, images, musiques, vidéos, œuvres d’art, avec un degré de subjectivité voulu par le service marketing de la marque. <b>C’est le « brief » qui va orienter et inspirer le parfumeur.</b></span>
