--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -359,8 +359,8 @@ crossorigin=""/>
           <span lang="en">Validation by the customer</span>
         </h2>
         <p>
-          <span lang="fr">Après réception de chaque essai créé par chaque société de création, le client choisi le parfum qui deviendra celui trouvé dans les rayons de nos parfumeries.</span>
-          <span lang="en">After receiving every trial, created by each creation companies, the client chooses the one that will be found in the shelves of our perfume shops.</span>
+          <span lang="fr">Après réception de chaque essai créé par chaque société de création, <b class="bplus">le client choisi le parfum qui deviendra celui trouvé dans les rayons de nos parfumeries.</b></span>
+          <span lang="en">After receiving every trial, created by each creation companies, <b class="bplus">the client chooses the one that will be found in the shelves of our perfume shops.</b></span>
         </p>
     </li>
     
@@ -370,8 +370,8 @@ crossorigin=""/>
           <span lang="en">Production of the perfume concentrate</span>
         </h2>
         <p>
-          <span lang="fr">La société ayant créé le parfum sélectionné est en charge de lancer le « concentré de parfum » (correspondant au parfum pur, non dilué dans sa base) en production. La production d’un concentré de parfum se fait en y mélangeant les matières premières.</span>
-          <span lang="en">The creation company is in charge of launching the "perfume concentrate" (corresponding to the pure perfume, undiluted in its base) in production. The production of a perfue concentrate is done by mixing the raw materials.</span>
+          <span lang="fr">La société ayant créé le parfum sélectionné est en charge de lancer le « concentré de parfum » (correspondant au parfum pur, non dilué dans sa base) en production. <b class="bplus">La production d’un concentré de parfum</b> se fait en y mélangeant les matières premières.</span>
+          <span lang="en">The creation company is in charge of launching the "perfume concentrate" (corresponding to the pure perfume, undiluted in its base) in production. The <b class="bplus">production of a perfume concentrate</b> is done by mixing the raw materials.</span>
         </p>
     </li>
     
@@ -382,8 +382,8 @@ crossorigin=""/>
         </h2>
         <img class="img6creationparfum" src="../img/prodparfum.jpg" alt="Usine de production de parfum" title="Usine de production de parfum">
         <p>
-          <span lang="fr">Il s’en suit l’envoi du concentré dans l’usine de production, appartenant à la marque, une période de « maturation » de ce concentré (et de « macération » dans le cas d’un parfum alcoolique), et la production du produit fini sur les chaînes de production de l’usine de la marque. Le parfum est conditionné dans son packaging, préalablement conçu en interne de la société, ou par un sous-traitant, et envoyé dans les points de vente dédiés.</span>
-          <span lang="en">This is followed by the sending of the concentrate to the production plant, belonging to the brand, a period of "maturation" of this concentrate (and "maceration" in the case of an alcoholic perfume), and the production of the finished product on the brand’s production lines. The perfume is packaged in its packaging, previously designed in-house or by a subcontractor, and sent to dedicated sales outlets.</span>
+          <span lang="fr">Il s’en suit l’envoi du concentré dans l’usine de production, appartenant à la marque, une période de « <b>maturation</b> » de ce concentré (et de « <b>macération</b> » dans le cas d’un parfum alcoolique), et la production du produit fini sur les chaînes de production de l’usine de la marque. Le parfum est conditionné dans son packaging, préalablement conçu en interne de la société, ou par un sous-traitant, et envoyé dans les points de vente dédiés.</span>
+          <span lang="en">This is followed by the sending of the concentrate to the production plant, belonging to the brand, a period of "<b>maturation</b>" of this concentrate (and "<b>maceration</b>" in the case of an alcoholic perfume), and the production of the finished product on the brand’s production lines. The perfume is packaged in its packaging, previously designed in-house or by a subcontractor, and sent to dedicated sales outlets.</span>
         </p>
     </li>
  
