--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -404,13 +404,20 @@ crossorigin=""/>
     <span lang="en">In short, the creation of a perfume is the result of several stages, and requires many skills, for which teamwork is essential. Revolving around the consumer, the perfume is initially an idea, sublimated by the artistic vision of a perfumer, himself guided by the evaluator, and helped by the perfumer assistant. The creation of a perfume is the alliance of a marketing and artistic will, while respecting the constraints of stability, regulation, cost and time imposed. The art of perfumery therefore lies in the marketing of a harmonious work, bypassing all constraints. Thus, more than ever, perfume is a product of luxury, refinement and excellence.</span>
 </p>
 
+<hr>
+
 <div>
   <p>
     <span lang="fr">Lire nos autres articles :</span>
     <span lang="en">Get to read our other articles :</span>
   </p>
     <ol>
-      <li></li>
+      <li>
+        <a href="../_/ingredientparfums">
+          <span lang="fr"> Decouvrez les secrets des ingredients de vos parfums !</span> 
+          <span lang="en"> Discover more about your perfume ingredients !</span>
+        </a>
+      </li>
       <li></li>
     </ol>
 </div>
