--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -337,7 +337,7 @@ crossorigin=""/>
           <br>
           Lorsqu’un ou plusieurs échantillons sont jugés satisfaisants par le parfumeur et l’évaluateur, ils sont <b>soumis au client</b> lors d’une réunion ayant lieu dans les locaux de l’entreprise créatrice. Une telle soumission peut intervenir au bout de quelques essais seulement, ou après des centaines, voire milliers d’essais réalisés. Tout dépend également de la limite de temps fixée par le client pour cette création. <b class="bplus">Le client donne alors son avis sur la fragrance, en validant un essai, ou en demandant un « retravail » de la formule</b>. Dans le cas d’un retravail, les échanges successifs entre création, pesée et évaluation continuent.</span>
           <span lang="en"><b class="bplus">This formula is received by a perfumer assistant, in charge of weighing the desired raw materials one by one in the laboratory</b>. The sample is taken to the perfumer, evaluated by the perfumer, then the formula is modified and weighed again. When the perfumer wishes to have an opinion from the evaluator, they meet and decide together on the modifications to be made.
-          When one or more samples are deemed satisfactory by the perfumer and the evaluator, they are <b>submitted to the client</b> at a meeting held in the creative company. Such a submission may occur after only a few tests, or after hundreds or even thousands of tests have been carried out. Tout dépend également de la limite de temps fixée par le client pour cette création. Le client donne son avis sur la fragrance, en validant un essai, ou en demandant un « retravail » de la formule. In the case of reworking, the successive exchanges between creation, weighing and evaluation continue.
+          When one or more samples are deemed satisfactory by the perfumer and the evaluator, they are <b>submitted to the client</b> at a meeting held in the creative company. Such a submission may occur after only a few tests, or after hundreds or even thousands of tests have been carried out. It all depends on the deadline fixed by the client for this creation. The client gives its opinion on the fragrance, validating a trial or asking for a "rework" of the formula. In the case of reworking, the successive exchanges between creation, weighing and evaluation continue.
           </span>
         </p>
     </li>
@@ -407,18 +407,21 @@ crossorigin=""/>
 <hr>
 
 <div>
-  <p>
-    <span lang="fr">Lire nos autres articles :</span>
+    <span lang="fr">Découvrez nos autres articles :</span>
     <span lang="en">Get to read our other articles :</span>
-  </p>
     <ol>
       <li>
         <a href="../_/ingredientparfums">
-          <span lang="fr"> Decouvrez les secrets des ingredients de vos parfums !</span> 
+          <span lang="fr"> Découvrez tous les secrets des ingredients de vos parfums !</span> 
           <span lang="en"> Discover more about your perfume ingredients !</span>
         </a>
       </li>
-      <li></li>
+      <li>
+        <a href="../_/allergenes">
+          <span lang="fr"> Des allergènes dans vos parfums ! Une peur justifiée ?? </span> 
+          <span lang="en"> Are our perfumes dangerous ?</span>
+        </a>
+      </li>
     </ol>
 </div>
 
