--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -409,7 +409,7 @@ crossorigin=""/>
 <div>
     <span lang="fr">Découvrez nos autres articles :</span>
     <span lang="en">Get to read our other articles :</span>
-    <ol>
+    <ul class="particulier">
       <li>
         <a href="../_/ingredientparfums">
           <span lang="fr"> Découvrez tous les secrets des ingredients de vos parfums !</span> 
@@ -422,7 +422,7 @@ crossorigin=""/>
           <span lang="en"> Are our perfumes dangerous ?</span>
         </a>
       </li>
-    </ol>
+    </ul>
 </div>
 
 
