--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -407,8 +407,8 @@ crossorigin=""/>
 <hr>
 
 <div>
-    <span lang="fr">Découvrez nos autres articles :</span>
-    <span lang="en">Get to read our other articles :</span>
+    <span lang="fr"><u>Découvrez nos autres articles :</u></span>
+    <span lang="en"><u>Get to read our other articles :</u></span>
     <ul class="particulier">
       <li>
         <a href="../_/ingredientparfums">
