--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -193,7 +193,7 @@ crossorigin=""/>
     </span>
   </p>
 
-  <p><img class="img1creationparfum" lang="fr" src="../img/cycleparfumFR.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum">
+  <p style="text-align: center;"><img class="img1creationparfum" lang="fr" src="../img/cycleparfumFR.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum">
   <img class="img1creationparfum" lang="en" src="../img/cycleparfumEN.png" alt="Cycle de création d'un parfum" title="Cycle de création d'un parfum"></p>
   
 
