--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -411,13 +411,13 @@ crossorigin=""/>
     <span lang="en"><u>Get to read our other articles :</u></span>
     <ul class="particulier">
       <li>
-        <a href="../_/ingredientparfums">
+        <a href="../_/ingredientparfums.html">
           <span lang="fr"> Découvrez tous les secrets des ingredients de vos parfums !</span> 
           <span lang="en"> Discover more about your perfume ingredients !</span>
         </a>
       </li>
       <li>
-        <a href="../_/allergenes">
+        <a href="../_/allergenes.html">
           <span lang="fr"> Des allergènes dans vos parfums ! Une peur justifiée ?? </span> 
           <span lang="en"> Are our perfumes dangerous ?</span>
         </a>
