--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -174,42 +174,85 @@ crossorigin=""/>
 
   <p><img class="img1allergene" src="../img/loupeallergens.jpg" alt="Etiquettage des allergènes" title="Etiquettage des allergènes"></p>
    
-  <p><i>Linalol, Limonène, Eugénol, Salicylate de Benzyl</i>… Vous avez sans doute déjà remarqué le nom de ces molécules sur le packaging de vos produits cosmétiques. Elles sont partout ! Il s’agit de molécules qualifiées « d’allergènes ». Comme souvent, les ingrédients d'origines chimiques et notamment les allergènes, font peur. Certaines marques créent même des parfums « sans allergènes » afin d'attirer une clientèle soucieuse de sa santé et effrayée par la présence de tant d'ingrédient inconnus. Ces allégations sont surtout mises en place pour rassurer les consommateurs, or nous allons voir ici que certains de ces ingrédients ne sont pas nécessairement "dangereux" et que leurs impacts sont souvent dramatisés. Nous verrons également que ces ingrédients se retrouvent également dans de nombreux aliments que nous consommons chaque jour et pour lesquelles nous ne constatons aucuns effets secondaires.  </p>
+  <p>
+    <span lang="fr"><i>Linalol, Limonène, Eugénol, Salicylate de Benzyl</i>… Vous avez sans doute déjà remarqué le nom de ces molécules sur le packaging de vos produits cosmétiques. Elles sont partout ! Il s’agit de molécules qualifiées « d’allergènes ». Comme souvent, les ingrédients d'origines chimiques et notamment les allergènes, font peur. Certaines marques créent même des parfums « sans allergènes » afin d'attirer une clientèle soucieuse de sa santé et effrayée par la présence de tant d'ingrédient inconnus. Ces allégations sont surtout mises en place pour rassurer les consommateurs, or nous allons voir ici que certains de ces ingrédients ne sont pas nécessairement "dangereux" et que leurs impacts sont souvent dramatisés. Nous verrons également que ces ingrédients se retrouvent également dans de nombreux aliments que nous consommons chaque jour et pour lesquelles nous ne constatons aucuns effets secondaires. </span>
+    <span lang="en"><i>Linalool, Limonene, Eugenol, Benzyl Salicylate</i>... You have probably already noticed the names of these molecules on the packaging of your cosmetic products. They're everywhere! They are molecules called "allergens". As is often the case, ingredients of synthetic origin, especially allergens, are frightening. Some brands even create "allergen-free" fragrances to attract health-conscious customers who are afraid of so many unknown ingredients. These claims are mainly put in place to reassure consumers. However, we will see here that some of these ingredients are not necessarily "dangerous" and that their impact is often dramatized.</span>
+  </p>
 
-  <p>Dans la composition de nos parfums portés et utilisés chaque jour, <b>26 allergènes</b> réputés peuvent exister. Cette liste de 26 molécules et extraits est dictée par l’ <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">annexe III du règlement cosmétique européen 1223/2009</a>. Il s’agit de molécules qui, lorsqu'elle sont présentes en quantités importantes, peuvent avoir la faculté de se fixer à une protéine présente dans notre peau. Cela peut entrainer une réaction (cf. schéma ci-dessous) fassant réagir notre système immunitaire et provoquant ainsi une réaction allergique. 
-  <br> A noter également que certaines substances réputées allergènes le sont uniquement lorsqu'un facteur annexe s'installe et induit une transformation chimique. C'est le cas notamment de certains ingrédients qui, au contact du soleil, peuvent s'oxyder et devenir de puissants allergènes. 
-  <br> Les réactions allergiques peuvent alors se manifester sous la forme de plaques rouges, de picotements etc. Le comité scientifique pour la sécurité des consommateurs a répertorié 54 molécules et 28 extraits naturels pouvant provoquer une réaction allergique chez l’Homme. Cette dernière liste n’est pas exploitée dans le milieu de la parfumerie.</p>
+  <p>
+    <span lang="fr">Dans la composition de nos parfums portés et utilisés chaque jour, <b>26 allergènes</b> réputés peuvent exister. Cette liste de 26 molécules et extraits est dictée par l’ <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">annexe III du règlement cosmétique européen 1223/2009</a>. Il s’agit de molécules qui, lorsqu'elle sont présentes en quantités importantes, peuvent avoir la faculté de se fixer à une protéine présente dans notre peau. Cela peut entrainer une réaction (cf. schéma ci-dessous) fassant réagir notre système immunitaire et provoquant ainsi une réaction allergique. 
+    <br>A noter également que certaines substances réputées allergènes le sont uniquement lorsqu'un facteur annexe s'installe et induit une transformation chimique. C'est le cas notamment de certains ingrédients qui, au contact du soleil, peuvent s'oxyder et devenir de puissants allergènes. 
+    <br>Les réactions allergiques peuvent alors se manifester sous la forme de plaques rouges, de picotements etc. Le comité scientifique pour la sécurité des consommateurs a répertorié 54 molécules et 28 extraits naturels pouvant provoquer une réaction allergique chez l’Homme. Cette dernière liste n’est pas exploitée dans le milieu de la parfumerie.</span>
+
+    <span lang="en">In the composition of our fragrances worn and used every day, 26 known allergens may exist. This list of 26 molecules and extracts is dictated by <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">Annex III of the European Cosmetic Regulation 1223/2009</a>. These are molecules which, when present in significant quantities, may have the ability to bind to a protein present in our skin. This can lead to a reaction of our immune system and thus cause an allergic reaction.
+    <br>It should also be noted that certain substances known to be allergenic are so only when an additional factor sets in and induces a transformation of the molecule. This is the case of certain ingredients that oxidise in light to become powerful allergens.
+    <br>Allergic reactions can then manifest themselves in the form of red patches, tingling, etc. The Scientific Committee for Consumer Safety has listed 54 molecules and 28 natural extracts that can cause an allergic reaction for humans. This latter list is not used in the perfume industry.</span>
+  </p>
 
   <p><img class="img2allergene" src="../img/impactallergens.png" alt="Mode d'action des allergènes"></p>
 
-  <p><b>En Europe, ces réactions allergiques concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être sensible à l'une des 26 substances listées par la réglementation cosmétique.</p>
-  <p>Alors, la réglementation cosmétique impose plusieurs mesures. <b>Ces mesures sont prises pour que chaque personne, allergique ou non, puisse consommer les produits parfumés du marché.</b> Si vous n’êtes allergique à aucune des substances, ces mesures n’ont pas d’utilité pour vous.</p>
+  <p>
+    <span lang="fr"><b>En Europe, ces réactions allergiques concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être sensible à l'une des 26 substances listées par la réglementation cosmétique. 
+    <span lang="en">In Europe, these allergic reactions affect only 1 to 3% of the population. This means that you have one to three chances in one hundred of being sensitive to at least one of the 26 substances listed by the cosmetic regulations.</span>
+  </p>
+
 
   <p><img class="img3allergene" src="../img/rincevsnonrince.png" alt="Différences entre un produit rincé et un non-rincé" > </p>
-  <p>La première intervient lors de la création d’un parfum. Dans le cas où ce parfum entrera en contact avec la peau, il existe deux types de produits : 
-  <ul>
-    <li>Les produits dits « <b>rincés</b> » (shampoings, gels douche…). Ces produits ne sont pas destinés à rester en contact avec la peau après leur utilisation. </li> 
-    <li>Les produits dits « <b>non-rincés</b> » (parfums alcooliques, crèmes…). Pour ces produits, le contact avec la peau entraine une exposition continue s'arretant lorsque l'utilisateur du produit se lave et donc, rince le produit contenant les molécules. </li>
-  </ul>
+  <p>
+    <span lang="fr">Alors, la réglementation cosmétique impose plusieurs mesures. <b>Ces mesures sont prises pour que chaque personne, allergique ou non, puisse consommer les produits parfumés du marché.</b> Si vous n’êtes allergique à aucune des substances, ces mesures n’ont pas d’utilité pour vous.</span>
+    <span lang="en">So, cosmetic regulations impose several measures. These measures are taken so that every person, allergic or not, can consume the perfumed products on the market. If you are not allergic to any of the substances, these measures are of no use to you.</span>
+  </p>
+  <p>
+    <span lang="fr">La première intervient lors de la création d’un parfum. Dans le cas où ce parfum entrera en contact avec la peau, il existe deux types de produits : </span>
+    <span lang="en">The first one occurs during the creation of a perfume. In the event that this perfume gets in contact with the skin, there are two types of products :</span>
+    <ul>
+      <li>
+        <span lang="fr">Les produits dits « <b>rincés</b> » (shampoings, gels douche…). Ces produits ne sont pas destinés à rester en contact avec la peau après leur utilisation. </span>
+        <span lang="en"></span>
+      </li> 
+      <li>
+        <span lang="fr">Les produits dits « <b>non-rincés</b> » (parfums alcooliques, crèmes…). Pour ces produits, le contact avec la peau entraine une exposition continue s'arretant lorsque l'utilisateur du produit se lave et donc, rince le produit contenant les molécules. </span>
+        <span lang="en"></span>
+      </li>
+    </ul>
   </p>
   
 
-  <p>Dans les produits rincés, la présence d’un allergène ne doit pas excéder 100 ppm (soit 0,01%) dans le produit fini. Dans les produits non-rincés, cette présence ne doit pas excéder 10 ppm (0,001%).
-  Par ailleurs, tout allergène présent à un taux supérieur à celui recommandé entraine sa mention sur le packaging du produit. </p>
+  <p>
+    <span lang="fr">Dans les produits rincés, la présence d’un allergène ne doit pas excéder 100 ppm (soit 0,01%) dans le produit fini. Dans les produits non-rincés, cette présence ne doit pas excéder 10 ppm (0,001%).
+    <br>Par ailleurs, tout allergène présent à un taux supérieur à celui recommandé entraine sa mention sur le packaging du produit.</span>
+    <span lang="en">In rinsed products, the presence of an allergen must not exceed 100 ppm (i.e. 0.01%) in the finished product. In non-rinsed products, the presence of an allergen shall not exceed 10 ppm (0.001%). 
+    <br>In addition, any allergen used at a higher level than the recommended one must be mentioned on the product packaging.</span>
+  </p>
 
-  <p>Par exemple, dans le cas où votre produit contient sur son packaging la mention de quatre molécules allergènes, sans savoir à quel(s) allergène(s) vous pourriez être allergique, cela signifie que vous avez tout au plus 0,5% de chance de contracter une allergie en utilisant ce produit. Faible, non ?</p>
+  <p>
+    <span lang="fr">Par exemple, dans le cas où votre produit contient sur son packaging la mention de quatre molécules allergènes, sans savoir à quel(s) allergène(s) vous pourriez être allergique, cela signifie que vous avez tout au plus 0,5% de chance de contracter une allergie en utilisant ce produit. Faible, non ?</span>
+    <span lang="en">For example, if your product contains four allergenic molecules on its packaging, without knowing to which allergen(s) you might be allergic, this means that you have at most a 0.5% chance of contracting an allergy when using this product. Low, isn't it?</span>
+  </p>
 
-  <p class="text-underline">Voici la liste des 26 allergènes dits « probables », répertoriés par la réglementation cosmétique et utilisables en parfumerie :</p>
+  <p class="text-underline">
+    <span lang="fr">Voici la liste des 26 allergènes dits « probables », répertoriés par la réglementation cosmétique et utilisables en parfumerie :</span>
+    <span lang="en">Find bellow a list of the 26 so-called "probable" allergens, found in the cosmetic regulation and being used in perfumery.</span>
+  </p>
 
   <div class="tableauallergenes col-12">
     <table class="col-8">
-    <caption>Les 26 allergènes en parfumerie</caption>
+    <caption>
+      <span lang="fr">Les 26 allergènes en parfumerie</span>
+      <span lang="en">All 26 allergens in perfumery</span>
+    </caption>
       <thead> <!-- En-tête du tableau -->
        <tr>
-           <th>Nom</th>
-           <th>N° CAS</th>
-           <th>Nom</th>
-           <th>N° CAS</th>
+          <th>
+            <span lang="fr">Nom</span>
+            <span lang="en">Name</span>
+          </th>
+          <th>N° CAS</th>
+          <th>
+            <span lang="fr">Nom</span>
+            <span lang="en">Name</span>
+          </th>
+          <th>N° CAS</th>
        </tr>
       </thead>
       <tbody>
