--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -165,18 +165,29 @@ crossorigin=""/>
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
-  <h1 class="gros_titre text-in-color-brown">LES ALLERGENES EN PARFUMERIE : UNE PEUR JUSTIFIEE ?</h1>
+  <h1 class="gros_titre text-in-color-brown">
+    <span lang="fr">LES ALLERGENES EN PARFUMERIE : UNE PEUR JUSTIFIEE ?</span>
+    <span lang="en">ALLERGENS IN PERFUMERY: A JUSTIFIED FEAR?</span>
+  </h1>
 </div>
 
 <hr>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
-  <p><img class="img1allergene" src="../img/loupeallergens.jpg" alt="Etiquettage des allergènes" title="Etiquettage des allergènes"></p>
+  <h2 class="sous_titre mt-3">
+    <span lang="fr">Doit-on avoir peur des ingrédients de nos parfum ? Les ingrédients allergènes présentent-ils un danger pour le consommateur ?</span>
+    <span lang="en">Is there a reason to fear our perfume ingredients ? Are allergenic compounds dangerous for the costumer ?</span>
+  </h2>
+
+  <p>
+    <img class="img1allergene" src="../img/loupeallergens.jpg" alt="Packaging produit cosmétique et allergènes" title="Packaging produit cosmétique et allergènes">
+    <img class="img1allergene" src="../img/loupeallergens.jpg" alt="Packaging cosmetic products and allergens" title="Packaging cosmetic products and allergens">
+  </p>
    
   <p>
-    <span lang="fr"><i>Linalol, Limonène, Eugénol, Salicylate de Benzyl</i>… Vous avez sans doute déjà remarqué le nom de ces molécules sur le packaging de vos produits cosmétiques. Elles sont partout ! Il s’agit de molécules qualifiées « d’allergènes ». Comme souvent, les ingrédients d'origines chimiques et notamment les allergènes, font peur. Certaines marques créent même des parfums « sans allergènes » afin d'attirer une clientèle soucieuse de sa santé et effrayée par la présence de tant d'ingrédient inconnus. Ces allégations sont surtout mises en place pour rassurer les consommateurs, or nous allons voir ici que certains de ces ingrédients ne sont pas nécessairement "dangereux" et que leurs impacts sont souvent dramatisés. Nous verrons également que ces ingrédients se retrouvent également dans de nombreux aliments que nous consommons chaque jour et pour lesquelles nous ne constatons aucuns effets secondaires. </span>
-    <span lang="en"><i>Linalool, Limonene, Eugenol, Benzyl Salicylate</i>... You have probably already noticed the names of these molecules on the packaging of your cosmetic products. They're everywhere! They are molecules called "allergens". As is often the case, ingredients of synthetic origin, especially allergens, are frightening. Some brands even create "allergen-free" fragrances to attract health-conscious customers who are afraid of so many unknown ingredients. These claims are mainly put in place to reassure consumers. However, we will see here that some of these ingredients are not necessarily "dangerous" and that their impact is often dramatized.</span>
+    <span lang="fr"><i>Linalol, Limonène, Eugénol, Salicylate de Benzyl</i>… Vous avez sans doute déjà remarqué le nom de ces molécules sur le packaging de vos produits cosmétiques. Elles sont partout ! Il s’agit de molécules qualifiées « d’<b>allergènes</b> ». Comme souvent, <u>les ingrédients d’origine synthétique, et notamment les allergènes, font peur</u>. Certaines marques créent même des parfums « sans allergènes » afin d’attirer une clientèle soucieuse de sa santé et effrayée par la présence de tant d’ingrédients inconnus. Ces allégations sont surtout mises en place pour rassurer les consommateurs. Or, nous allons voir ici que <u>certains de ces ingrédients ne sont pas nécessairement « dangereux »</u> et que <b class="bplus">leur impact est souvent dramatisé</b></span>
+    <span lang="en"><i>Linalool, Limonene, Eugenol, Benzyl Salicylate</i>... You have probably already noticed the names of these molecules on the packaging of your cosmetic products. They're everywhere! They are molecules called "<b>allergens</b>". As is often the case, <u>ingredients of synthetic origin, especially allergens, are frightening</u>. Some brands even create "allergen-free" fragrances to attract health-conscious customers who are afraid of so many unknown ingredients. These claims are mainly put in place to reassure consumers. However, we will see here that <u>some of these ingredients are not necessarily "dangerous"</u> and that <b class="bplus">their impact is often dramatized</b>.</span>
   </p>
 
   <p>
@@ -208,11 +219,11 @@ crossorigin=""/>
     <ul>
       <li>
         <span lang="fr">Les produits dits « <b>rincés</b> » (shampoings, gels douche…). Ces produits ne sont pas destinés à rester en contact avec la peau après leur utilisation. </span>
-        <span lang="en"></span>
+        <span lang="en">So-called « rinced » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
       </li> 
       <li>
         <span lang="fr">Les produits dits « <b>non-rincés</b> » (parfums alcooliques, crèmes…). Pour ces produits, le contact avec la peau entraine une exposition continue s'arretant lorsque l'utilisateur du produit se lave et donc, rince le produit contenant les molécules. </span>
-        <span lang="en"></span>
+        <span lang="en">So-called « not-rinced » products (alcoholic perfumes, lotions…). Skin contact with these products is permanent and stops when the perfumes evaporates or when the consumer washes the concerned zone.</span>
       </li>
     </ul>
   </p>
