--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -181,8 +181,8 @@ crossorigin=""/>
   </h2>
 
   <p>
-    <img class="img1allergene" src="../img/loupeallergens.jpg" alt="Packaging produit cosmétique et allergènes" title="Packaging produit cosmétique et allergènes">
-    <img class="img1allergene" src="../img/loupeallergens.jpg" alt="Packaging cosmetic products and allergens" title="Packaging cosmetic products and allergens">
+    <img class="img1allergene" lang="fr" src="../img/loupeallergens.jpg" alt="Packaging produit cosmétique et allergènes" title="Packaging produit cosmétique et allergènes">
+    <img class="img1allergene" lang="en" src="../img/loupeallergens.jpg" alt="Packaging cosmetic products and allergens" title="Packaging cosmetic products and allergens">
   </p>
    
   <p>
