--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -176,7 +176,7 @@ crossorigin=""/>
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
   <h2 class="sous_titre mt-3">
-    <span lang="fr">Doit-on avoir peur des ingrédients de nos parfum ? Les ingrédients allergènes présentent-ils un danger pour le consommateur ?</span>
+    <span lang="fr">Doit-on avoir peur des ingrédients de nos parfum ?<br>Les ingrédients allergènes présentent-ils un danger pour le consommateur ?</span>
     <span lang="en">Is there a reason to fear our perfume ingredients ? Are allergenic compounds dangerous for the costumer ?</span>
   </h2>
 
@@ -190,7 +190,7 @@ crossorigin=""/>
     <span lang="en"><i>Linalool, Limonene, Eugenol, Benzyl Salicylate</i>... You have probably already noticed the names of these molecules on the packaging of your cosmetic products. They're everywhere! They are molecules called "<b>allergens</b>". As is often the case, <u>ingredients of synthetic origin, especially allergens, are frightening</u>. Some brands even create "allergen-free" fragrances to attract health-conscious customers who are afraid of so many unknown ingredients. These claims are mainly put in place to reassure consumers. However, we will see here that <u>some of these ingredients are not necessarily "dangerous"</u> and that <b class="bplus">their impact is often dramatized</b>.</span>
   </p>
 
-  <p>
+  <p class="mt-4">
     <span lang="fr">Dans la composition de nos parfums portés et utilisés chaque jour, <b>26 allergènes</b> réputés peuvent exister. Cette liste de 26 molécules et extraits est dictée par l’ <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">annexe III du règlement cosmétique européen 1223/2009</a>. Il s’agit de molécules qui, lorsqu'elle sont présentes en quantités importantes, peuvent avoir la faculté de se fixer à une protéine présente dans notre peau. Cela peut entrainer une réaction (cf. schéma ci-dessous) fassant réagir notre système immunitaire et provoquant ainsi une réaction allergique. 
     <br>A noter également que certaines substances réputées allergènes le sont uniquement lorsqu'un facteur annexe s'installe et induit une transformation chimique. C'est le cas notamment de certains ingrédients qui, au contact du soleil, peuvent s'oxyder et devenir de puissants allergènes. 
     <br>Les réactions allergiques peuvent alors se manifester sous la forme de plaques rouges, de picotements etc. Le comité scientifique pour la sécurité des consommateurs a répertorié 54 molécules et 28 extraits naturels pouvant provoquer une réaction allergique chez l’Homme. Cette dernière liste n’est pas exploitée dans le milieu de la parfumerie.</span>
