--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -200,7 +200,10 @@ crossorigin=""/>
     <br>Allergic reactions can then manifest themselves in the form of red patches, tingling, etc. The Scientific Committee for Consumer Safety has listed <b class="bplus">54 molecules and 28 natural extracts that can cause an allergic reaction for humans</b>. This latter list is <u>not used in the perfume industry</u>.</span>
   </p>
 
-  <p><img class="img2allergene" src="../img/impactallergens.png" alt="Mode d'action des allergènes"></p>
+  <p>
+    <img class="img2allergene" lang="fr" src="../img/impactallergens.png" alt="Allergènes parfum et réponse immunitaire" title="Allergènes parfum et réponse immunitaire">
+    <img class="img2allergene" lang="en" src="../img/impactallergensEN.png" alt="Fragrance allergens and immune response" title="Fragrance allergens and immune response">
+  </p>
 
   <p>
     <span lang="fr"><b>En Europe, ces réactions allergiques concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être sensible à l'une des 26 substances listées par la réglementation cosmétique. 
