--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -206,15 +206,15 @@ crossorigin=""/>
   </p>
 
   <p>
-    <span lang="fr"><b>En Europe, ces réactions allergiques concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être sensible à l'une des 26 substances listées par la réglementation cosmétique. 
-    <span lang="en">In Europe, these allergic reactions affect only 1 to 3% of the population. This means that you have one to three chances in one hundred of being sensitive to at least one of the 26 substances listed by the cosmetic regulations.</span>
+    <span lang="fr"><b class="bplus">En Europe, ces réactions allergiques concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être sensible à l'une des 26 substances listées par la réglementation cosmétique. A cela s'ajoute le fait qu'un parfum contient très rarement, voir jamais, ces 26 allergènes ensemble. 
+    <span lang="en"><b class="bplus">In Europe, these allergic reactions affect only 1 to 3% of the population.</b> This means that you have one to three chances in one hundred of being sensitive to at least one of the 26 substances listed by the cosmetic regulations.</span>
   </p>
 
 
   <p><img class="img3allergene" src="../img/rincevsnonrince.png" alt="Différences entre un produit rincé et un non-rincé" > </p>
   <p>
-    <span lang="fr">Alors, la réglementation cosmétique impose plusieurs mesures. <b>Ces mesures sont prises pour que chaque personne, allergique ou non, puisse consommer les produits parfumés du marché.</b> Si vous n’êtes allergique à aucune des substances, ces mesures n’ont pas d’utilité pour vous.</span>
-    <span lang="en">So, cosmetic regulations impose several measures. These measures are taken so that every person, allergic or not, can consume the perfumed products on the market. If you are not allergic to any of the substances, these measures are of no use to you.</span>
+    <span lang="fr">Alors, <b class="bplus">la réglementation cosmétique impose plusieurs mesures.</b> <u>Ces mesures sont prises pour que chaque personne, allergique ou non, puisse consommer les produits parfumés du marché.</u> Si vous n’êtes allergique à aucune des substances, ces mesures n’ont pas d’utilité pour vous.</span>
+    <span lang="en">So, <b class="bplus">cosmetic regulations impose several measures</b>. <u>These measures are taken so that every person, allergic or not, can consume the perfumed products on the market</u>. If you are not allergic to any of the substances, these measures are of no use to you.</span>
   </p>
   <p>
     <span lang="fr">La première intervient lors de la création d’un parfum. Dans le cas où ce parfum entrera en contact avec la peau, il existe deux types de produits : </span>
