--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -224,11 +224,11 @@ crossorigin=""/>
     <ul>
       <li>
         <span lang="fr">Les produits dits « <b>rincés</b> » (shampoings, gels douche…). Ces produits ne sont pas destinés à rester en contact avec la peau après leur utilisation. </span>
-        <span lang="en">So-called « rinced » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
+        <span lang="en">So-called « <b>rinced</b> » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
       </li> 
       <li>
         <span lang="fr">Les produits dits « <b>non-rincés</b> » (parfums alcooliques, crèmes…). Pour ces produits, le contact avec la peau entraine une exposition continue s'arretant lorsque l'utilisateur du produit se lave et donc, rince le produit contenant les molécules. </span>
-        <span lang="en">So-called « not-rinced » products (alcoholic perfumes, lotions…). Skin contact with these products is permanent and stops when the perfumes evaporates or when the consumer washes the concerned zone.</span>
+        <span lang="en">So-called « <b>not-rinced</b> » products (alcoholic perfumes, lotions…). Skin contact with these products is permanent and stops when the perfumes evaporates or when the consumer washes the concerned zone.</span>
       </li>
     </ul>
   </p>
