--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -221,7 +221,7 @@ crossorigin=""/>
     <span lang="en">The first one occurs during the creation of a perfume. In the event that this perfume gets in contact with the skin, there are two types of products :</span>
   </p>
   <p>
-    <ul>
+    <ul class="categorieparfum">
       <li>
         <span lang="fr">Les produits dits « <b>rincés</b> » (shampoings, gels douche…). Ces produits ne sont pas destinés à rester en contact avec la peau après leur utilisation. </span>
         <span lang="en">So-called « <b>rinced</b> » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
